Fix z-indexes.

--- a/jujugui/static/gui/src/app/assets/css/base.scss
+++ b/jujugui/static/gui/src/app/assets/css/base.scss
@@ -98,9 +98,10 @@ $z-indexed-elements: search-results-list-block__tags,
                      env-size-display,
                      inspector-view,
                      deployment-bar-panel,
-                     mid-point-panel,
                      cookie-policy,
-                     header-banner,
+                     header-banner-breadcrumbs,
+                     white-box,
+                     header-banner-search,
                      user-profile,
                      deployment-summary-panel,
                      more-menu,
