--- a/jujugui/static/gui/src/app/components/panel/_panel.scss
+++ b/jujugui/static/gui/src/app/components/panel/_panel.scss
@@ -12,7 +12,7 @@
 }
 
 .panel-component.white-box {
-    z-index: index($z-indexed-elements, mid-point-panel);
+    z-index: index($z-indexed-elements, white-box);
     top: 0;
     bottom: 0;
     left: 0;
